clusters/home/apps/kubernetes-dashboard/kubernetes-dashboard/configs/kubernetes-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-ingressroute
  namespace: kubernetes-dashboard
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://kubernetes-dashboard.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: kubernetes-dashboard
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: mdi-application
    gethomepage.dev/app: kubernetes-dashboard # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: kubernetes-dashboard
    #gethomepage.dev/widget.type: "kubernetes-dashboard"
    #gethomepage.dev/widget.url: "https://kubernetes-dashboard.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kubernetes-dashboard.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      port: 80
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: kubernetes-dashboard-certificate-secret
